src/objects/Consultant_Rating__c.object
<CustomObject>
    <description>To be used to rack ratings for a specific consultant</description>
    <fields>
        <fullName>Client__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consultant Rating</relationshipLabel>
        <relationshipName>Consultant_Ratings1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Consultant__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Consultant</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Consultant Ratings</relationshipLabel>
        <relationshipName>Consultant_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>External_Rating__c</fullName>
        <inlineHelpText>This corresponds to the Consultant&apos;s name for a rating</inlineHelpText>
        <label>External Rating</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MFS_Rating__c</fullName>
        <inlineHelpText>This rating corresponds to the MFS defined, common rating for a Consultant Rated Product</inlineHelpText>
        <label>MFS Rating</label>
        <picklist>
            <picklistValues>
                <fullName>A</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>A-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B-</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>B+</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>C</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Not Rated</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>MFS_Strategy_Status__c</fullName>
        <label>MFS Strategy Status</label>
        <picklist>
            <picklistValues>
                <fullName>Focus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Opportunistic</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Hold</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Product_Rating_Request__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product Rating Request</label>
        <referenceTo>Strategy_Rating_Process__c</referenceTo>
        <relationshipLabel>Consultant Ratings</relationshipLabel>
        <relationshipName>Consultant_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy</label>
        <referenceTo>Product2</referenceTo>
        <relationshipLabel>Consultant Ratings</relationshipLabel>
        <relationshipName>Consultant_Ratings</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Rating_Change_Type__c</fullName>
        <label>Rating Change Type</label>
        <picklist>
            <picklistValues>
                <fullName>Downgrade</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Change</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Upgrade</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Rating_Description__c</fullName>
        <label>Rating Description</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Rating_Health__c</fullName>
        <formula>IMAGE( 
IF(ISPICKVAL( Rating_Status__c , &quot;Green&quot;), &apos;/resource/GreenUp&apos;, 
IF(ISPICKVAL( Rating_Status__c , &quot;Blue&quot;), &apos;/resource/GreenUp&apos;,
IF(ISPICKVAL( Rating_Status__c , &quot;Black&quot;), &apos;/resource/YellowNoChange&apos;,  
IF(ISPICKVAL( Rating_Status__c , &quot;Red&quot;), &apos;/resource/RedDown&apos;,&quot;&quot;)))),&quot;&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Blue signifies Rating Upgrade, Red signifies Rating Downgrade, Black signals No Change</inlineHelpText>
        <label>Rating Health</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rating_Last_Updated_Date__c</fullName>
        <label>Rating Last Updated Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Rating_Status__c</fullName>
        <label>Rating Status</label>
        <picklist>
            <picklistValues>
                <fullName>Black</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Blue</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Green</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Red</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Requested_Rating_Change__c</fullName>
        <label>Requested Rating Change</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Due Diligence Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Info Sent / Discussions</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Invested w/ Clients</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Meeting Done</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Current Interest</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No Future Interest</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Consultant Rating</label>
    <listViews>
        <fullName>ARG_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>ARG Approvers</label>
        <queue>ARG_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Asia_ex_Japan_Rating_Change_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>Asia-ex Japan Rating Change Approvers</label>
        <queue>Asia_ex_Japan_Rating_Change_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Australia_New_Zealand_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>Australia / New Zealand Approvers</label>
        <queue>Australia_New_Zealand_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Consultant_Relations_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>Consultant Relations Approvers</label>
        <queue>Consultant_Relations_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>EMEA_Rating_Change_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>EMEA Rating Change Approvers</label>
        <queue>EMEA_Rating_Change_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Japan_Rating_Change_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>Japan Rating Change Approvers</label>
        <queue>Japan_Rating_Change_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>MFD_KAM_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>MFD (KAM) Approvers</label>
        <queue>MFD_KAM_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Non_US_Retail_Rating_Change_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>Non-US Retail Rating Change Approvers</label>
        <queue>Non_US_Retail_Rating_Change_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>North_America_Rating_Change_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>North America Rating Change Approvers</label>
        <queue>North_America_Rating_Change_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>PPM_ISG_Approvers_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>PPM/ISG Approvers</label>
        <queue>PPM_ISG_Approvers</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <listViews>
        <fullName>Rel_Mgrs_ex_Asia_Pac_Hybrids_Approver_Consultant_Rating</fullName>
        <filterScope>Queue</filterScope>
        <label>Rel Mgrs (ex Asia Pac Hybrids) Approver</label>
        <queue>Rel_Mgrs_ex_Asia_Pac_Hybrids_Approver</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <label>Rating Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consultant Ratings</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>